# formal-islands

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.claude/: launch.json
artifacts/nonnegative-sum-minimal/: 01_extracted_graph.json  02_candidate_graph.json  03_formalization_summary.json  03_formalized_graph.json  04_report.html  04_report_bundle.json
artifacts/nonnegative-sum-smoke/: 01_extracted_graph.json  02_candidate_graph.json  03_formalization_summary.json  03_formalized_graph.json  04_report.html  04_report_bundle.json
dev/: opengauss-backend-plan.md  publishing.md  run_history.md
docs/: design-note.md  featured_graphs.json  index.html  opengauss-backend-plan.md  publishing.md  run_history.md
docs/reports/: banach_stone.html  colorful_caratheodory.html  discrete_loomis_whitney.html  gershgorin_circle.html  gleason_kahane_zelazko.html  heat_uniqueness.html  hoeffding_lemma.html  matrix_determinant_lemma.html  two_point_log_sobolev.html  (+1 more)
examples/: nonnegative_sum_graph.json  nonnegative_sum_input.json  toy_implication_input.md
lean_project/: FormalIslands.lean  lake-manifest.json  lakefile.toml  test_bernoulli.lean  test_deriv.lean  test_deriv2.lean  test_deriv3.lean  test_taylor.lean
scripts/: generate_featured_graphs.py  spectral_product_case_study.py  summarize_formalization_runs.py
tests/: test_backends.py  test_extraction_pipeline.py  test_featured_graphs.py  test_formalization_pipeline.py  test_lean_formalization.py  test_mathlib_search.py  test_models.py  test_review_and_report.py  test_run_audit_summary.py  test_smoke.py
(+459 files in other folders)
