[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "formal-islands"
version = "0.1.0"
description = "Prototype tooling for proof graphs with local Lean formal islands."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.10,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
